--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       h1 {
       margin: 0 0 20px;
       font-weight: 400;
-      color: #1c87c9;
+      color: #ca1111;
       }
       p {
       margin: 0 0 5px;
@@ -27,7 +27,7 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      background: #1c87c9;
+      background: #9923dd;
       }
       form {
       padding: 25px;
