--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </head>
   <body>
     <div class="main-block">
-      <form action="/">
+      <form name="contact" method="POST" data-netlify="true">
         <h1>Contact Form</h1>
         <div class="info">
           <input class="fname" type="text" name="name" placeholder="Full name">
