--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
         </div>
         <p>Please write a message</p>
         <div>
-          <textarea rows="4"></textarea>
+          <textarea rows="4">
+              example
+          </textarea>
         </div>
         <button type="submit" href="/">Send Message</button>
       </form>
