--- a/index.html
+++ b/index.html
@@ -90,19 +90,18 @@
   </head>
   <body>
     <div class="main-block">
-      <form name="contact" method="POST" data-netlify="true">
-        <h1>Contact Form</h1>
+        <form name="contact" method="POST" data-netlify="true">
+            <fieldset>
+          <h1>Contact Form</h1>
         <div class="info">
           <input class="fname" type="text" name="name" placeholder="Full name">
           <input type="text" name="name" placeholder="Email">
         </div>
         <p>Please write a message</p>
-        <div>
-          <textarea rows="4">
-              example
-          </textarea>
+        <div>fixing
         </div>
         <button type="submit" href="/">Send Message</button>
+        </fieldset>
       </form>
     </div>
   </body>
