--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <input type="text" name="name" placeholder="Email">
         </div>
         <p>Please write a message</p>
-        <div>fixing
+        <div>
         </div>
         <button type="submit" href="/">Send Message</button>
         </fieldset>
