--- a/index.html
+++ b/index.html
@@ -1,108 +1,110 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Contact form</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <style>
+        html,
+        body {
+            min-height: 100%;
+            padding: 0;
+            margin: 0;
+            font-family: Roboto, Arial, sans-serif;
+            font-size: 14px;
+            color: #666;
+        }
 
-      html, body {
-      min-height: 100%;
-      padding: 0;
-      margin: 0;
-      font-family: Roboto, Arial, sans-serif;
-      font-size: 14px;
-      color: #666;
-      }
+        h1 {
+            margin: 0 0 20px;
+            font-weight: 400;
+            color: #ca1111;
+        }
 
-      h1 {
-      margin: 0 0 20px;
-      font-weight: 400;
-      color: #ca1111;
-      }
-      p {
-      margin: 0 0 5px;
-      }
+        p {
+            margin: 0 0 5px;
+        }
 
-      .main-block {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      background: #9923dd;
-      }
-      
-      form {
-      padding: 25px;
-      margin: 25px;
-      box-shadow: 0 2px 5px #f5f5f5; 
-      background: #f5f5f5; 
-      }
+        .main-block {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background: #9923dd;
+        }
 
-      .fas {
-      margin: 25px 10px 0;
-      font-size: 72px;
-      color: #fff;
-      }
+        form {
+            padding: 25px;
+            margin: 25px;
+            box-shadow: 0 2px 5px #f5f5f5;
+            background: #f5f5f5;
+        }
 
-      .fa-envelope {
-      transform: rotate(-20deg);
-      }
+        .fas {
+            margin: 25px 10px 0;
+            font-size: 72px;
+            color: #fff;
+        }
 
-      .fa-at , .fa-mail-bulk{
-      transform: rotate(10deg);
-      }
+        .fa-envelope {
+            transform: rotate(-20deg);
+        }
 
-      input, textarea {
-      width: calc(100% - 18px);
-      padding: 8px;
-      margin-bottom: 20px;
-      border: 1px solid #1c87c9;
-      outline: none;
-      }
+        .fa-at,
+        .fa-mail-bulk {
+            transform: rotate(10deg);
+        }
 
-      input::placeholder {
-      color: #666;
-      }
+        input,
+        textarea {
+            width: calc(100% - 18px);
+            padding: 8px;
+            margin-bottom: 20px;
+            border: 1px solid #1c87c9;
+            outline: none;
+        }
 
-      button {
-      width: 100%;
-      padding: 10px;
-      border: none;
-      background: #1c87c9; 
-      font-size: 16px;
-      font-weight: 400;
-      color: #fff;
-      }
+        input::placeholder {
+            color: #666;
+        }
 
-      button:hover {
-      background: #2371a0;
-      }    
+        button {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            background: #1c87c9;
+            font-size: 16px;
+            font-weight: 400;
+            color: #fff;
+        }
 
-      @media (min-width: 568px) {
-      .main-block {
-      flex-direction: row;
-      }
-      }
+        button:hover {
+            background: #2371a0;
+        }
 
+        @media (min-width: 568px) {
+            .main-block {
+                flex-direction: row;
+            }
+        }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="main-block">
         <form name="contact" method="POST" data-netlify="true">
             <fieldset>
-          <h1>Contact Form</h1>
-        <div class="info">
-          <input class="fname" type="text" name="name" placeholder="Full name">
-          <input type="text" name="name" placeholder="Email">
-        </div>
-        <p>Please write a message</p>
-        <div>
-        </div>
-        <button type="submit" href="/">Send Message</button>
-        </fieldset>
-      </form>
+                <h1>Contact Form</h1>
+                <div class="message">
+                    <div><label>Email:<br><br><textarea class="input-box" name="email" required></textarea></label>
+                    </div>
+                    <div><label>Message:<br><br><textarea type="textarea" name="message" required></textarea></label>
+                    </div>
+                </div>
+                <button type="submit" href="/">Send Message</button>
+            </fieldset>
+        </form>
     </div>
-  </body>
+</body>
+
 </html>
